# Belgian-Houses-Fair-Value

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: refresh.yml
data/: metrics.json  model_q10.txt  model_q90.txt  residuals_test.csv
notebooks/: 01_classical_eda.ipynb  03_temporal_eda.ipynb  04_outliers_and_edge_cases.ipynb  05_model_eda.ipynb
scripts/: 00_fetch_active_snapshot.py  01_export_bq.py  02_train_model.py  03_diagnose_coverage.py  04_calibration_experiments.py  05_conditional_conformal.py
web/: index.html  package.json
web/functions/api/: nl-search.ts
web/src/: App.css  App.tsx  index.css  main.tsx
web/src/components/: AboutModel.tsx  DetailCard.tsx  LanguageToggle.tsx  MapView.tsx  Sidebar.tsx  ThemeToggle.tsx  WelcomeModal.tsx
web/src/i18n/: context.tsx  en.ts  fr.ts  nl.ts  types.ts
web/src/lib/: duckdb.ts  filters.ts  nlSearch.ts  urlState.ts
